chapter09/global-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: http
              readOnly: true
      volumes:
        - name: http
          emptyDir:
            sizeLimit: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    service.cilium.io/global: "true"
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
