chapter09/frontend-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: frontend
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: frontend
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "nginx.default.svc.cluster.local."
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: nginx
          matchExpressions:
            - key: io.cilium.k8s.policy.cluster
              operator: In
              values:
                - green
                - blue
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
